--- a/math_02.Rmd
+++ b/math_02.Rmd
@@ -19,8 +19,9 @@ library(plotly)
 
 ```{r}
 ## read and understand data ##
-time.df <- read.csv('C:/My stuff/Data Science 1/DataSci_project/coordinates.csv')
+time.df <- read.csv('C:/My stuff/Data Science 1/DataSci_project/function/coordinates_Steven.csv')
 head(df)
+#V stands for visibility [of the body parts] and how confident the machine is in capturing the right motion.
 
 ```
 
@@ -32,10 +33,18 @@ head(df)
 ```
 
 
+```{r}
+#Convert hertz to second (1 second = 30 hertz) 
+
+time.df2 <- time.df %>%
+    mutate(t_sec = X/30)
+
+```
+
 
 ```{r}
 
-right_shoulder_plot <- ggplot(time.df, aes(x = RIGHT_SHOULDER_X, y =  RIGHT_SHOULDER_Y)) +
+right_shoulder_plot <- ggplot(time.df2, aes(x = RIGHT_SHOULDER_X, y =  RIGHT_SHOULDER_Y)) +
     geom_point() +
     geom_path() +
     theme_classic()
@@ -45,7 +54,7 @@ right_shoulder_plot
 
 
 ```{r}
-right_shoulder_x <- ggplot(time.df, aes(x = X, y =  RIGHT_SHOULDER_X)) +
+right_shoulder_x <- ggplot(time.df2, aes(x = X, y =  RIGHT_SHOULDER_X)) +
     geom_point() +
     geom_path() +
     theme_classic()
@@ -55,7 +64,7 @@ right_shoulder_x
 ```
 
 ```{r}
-right_shoulder_y <- ggplot(time.df, aes(x = X, y =  RIGHT_SHOULDER_Y)) +
+right_shoulder_y <- ggplot(time.df2, aes(x = X, y =  RIGHT_SHOULDER_Y)) +
     geom_point() +
     geom_path() +
     theme_classic()
@@ -66,7 +75,7 @@ right_shoulder_y
 
 
 ```{r}
-shoulder.df = time.df %>% select(RIGHT_SHOULDER_X, RIGHT_SHOULDER_Y, RIGHT_SHOULDER_Z)
+shoulder.df = time.df2 %>% select(RIGHT_SHOULDER_X, RIGHT_SHOULDER_Y, RIGHT_SHOULDER_Z)
 shoulder.df
 ```
 ```{r}
@@ -142,14 +151,127 @@ plot_3D_shoulder
 ```
 
 
-```{r}
-#Convert hertz to second (1 second = 30 hertz) 
-#V stands for visibility [of the body parts] and how confident the machine is in capturing the right motion.
 
-time.df2 <- time.df %>%
-    mutate(t_sec = X/30)
+
+
+
+
+
+
+## looking at hertz based motions
+
+```{r}
+
+right_shoulder_plot_h <- ggplot(time.df, aes(x = RIGHT_SHOULDER_X, y =  RIGHT_SHOULDER_Y)) +
+    geom_point() +
+    geom_path() +
+    theme_classic()
+right_shoulder_plot_h
 
 ```
+
+
+```{r}
+right_shoulder_x_h <- ggplot(time.df, aes(x = X, y =  RIGHT_SHOULDER_X)) +
+    geom_point() +
+    geom_path() +
+    theme_classic()
+right_shoulder_x_h
+
+
+```
+
+```{r}
+right_shoulder_y_h <- ggplot(time.df, aes(x = X, y =  RIGHT_SHOULDER_Y)) +
+    geom_point() +
+    geom_path() +
+    theme_classic()
+right_shoulder_y_h
+
+
+```
+
+
+```{r}
+shoulder.df_h = time.df %>% select(RIGHT_SHOULDER_X, RIGHT_SHOULDER_Y, RIGHT_SHOULDER_Z)
+shoulder.df_h
+```
+```{r}
+pca_shoulder_h = prcomp(shoulder.df_h, center = T, scale. = T)
+
+summary(pca_shoulder_h)
+```
+
+```{r}
+#Extract principal components
+pc_scores_h <- pca_shoulder_h$x  # Scores (coordinates of the data points in the new space)
+pc_loadings_h <- pca_shoulder_h$rotation  # Loadings (coefficients of the original variables in the principal components)
+```
+
+```{r}
+#Visualize the proportion of variance explained by each principal component
+plot(cumsum(pca_shoulder_h$sdev^2) / sum(pca_shoulder_h$sdev^2), xlab = "Number of Principal Components", ylab = "Cumulative Proportion of Variance Explained", type = "b")
+
+#Choose the number of components based on the plot above
+```
+
+
+```{r}
+#based on the plot above 
+#Reduce dimensions
+num_components_to_keep_h <- 2  # Choose the number of components you want to keep
+reduced_data_h <- pc_scores_h[, 1:num_components_to_keep_h]
+
+# The 'reduced_data' dataframe now contains the data with reduced dimensions
+
+```
+
+
+```{r}
+# Create a dataframe for the reduced data
+reduced_data_df_h <- as.data.frame(reduced_data_h)
+
+# Scatter plot of the reduced data
+plot(reduced_data_df_h$PC1, reduced_data_df_h$PC2, 
+     xlab = "Principal Component 1",
+     ylab = "Principal Component 2",
+     main = "Scatter Plot of Reduced Data")
+
+
+```
+
+
+```{r}
+plot_3D_shoulder_h <- plot_ly(
+  data = shoulder.df_h,
+  x = ~RIGHT_SHOULDER_X,
+  y = ~RIGHT_SHOULDER_Y,
+  z = ~RIGHT_SHOULDER_Z,
+  #text = ~paste("Time: ", time),
+  type = "scatter3d",
+  mode = "markers"
+)
+
+# Customize the layout
+layout_h <- list(
+  scene = list(
+    xaxis = list(title = 'X-axis'),
+    yaxis = list(title = 'Y-axis'),
+    zaxis = list(title = 'Z-axis')
+  )
+)
+
+# Combine plot and layout
+plot_3D_shoulder_h <- plot_3D_shoulder_h %>% layout(layout_h)
+
+# Display the interactive plot
+plot_3D_shoulder_h
+```
+
+
+
+
+
 
 
 ```{r}
