--- a/math_02.Rmd
+++ b/math_02.Rmd
@@ -19,16 +19,15 @@ library(plotly)
 
 ```{r}
 ## read and understand data ##
-time.df <- read.csv('C:/My stuff/Data Science 1/DataSci_project/function/coordinates_Steven.csv')
+time.df <- read.csv('C:/My stuff/Data Science 1/DataSci_project/function/coordinates_Dami.csv')
 head(df)
-#V stands for visibility [of the body parts] and how confident the machine is in capturing the right motion.
+
 
 ```
 
 ```{r}
 #looking at the column's info
-
-#str(time.df)
+str(time.df)
 
 ```
 
@@ -41,8 +40,15 @@ time.df2 <- time.df %>%
 
 ```
 
+```{r}
+#aha moment happend at the second 203 based on the video recording
+#truncating the data to 60 seconds before and after the insight moment
+
+```
+
 
 ```{r}
+#plotting X and Y of right shoulder motion
 
 right_shoulder_plot <- ggplot(time.df2, aes(x = RIGHT_SHOULDER_X, y =  RIGHT_SHOULDER_Y)) +
     geom_point() +
@@ -54,29 +60,42 @@ right_shoulder_plot
 
 
 ```{r}
+#plotting shoulder's x axes over time
+
 right_shoulder_x <- ggplot(time.df2, aes(x = X, y =  RIGHT_SHOULDER_X)) +
-    geom_point() +
-    geom_path() +
-    theme_classic()
+  geom_point() +
+  geom_path() +
+  geom_vline(xintercept = 203*30, linetype = "dashed", color = "red")+  
+  
+  xlab("time")+
+  theme_classic()
+
 right_shoulder_x
 
 
 ```
 
 ```{r}
+#plotting shoulder's y axes over time
+
 right_shoulder_y <- ggplot(time.df2, aes(x = X, y =  RIGHT_SHOULDER_Y)) +
-    geom_point() +
-    geom_path() +
-    theme_classic()
+  geom_point() +
+  geom_path() +
+  geom_vline(xintercept = 203*30, linetype = "dashed", color = "red") +
+  xlab("time")+
+  
+  theme_classic()
 right_shoulder_y
 
 
 ```
 
+#Principle Component Analysis 
 
 ```{r}
+#preparing data for Priciple Component Analysis
 shoulder.df = time.df2 %>% select(RIGHT_SHOULDER_X, RIGHT_SHOULDER_Y, RIGHT_SHOULDER_Z)
-shoulder.df
+#shoulder.df
 ```
 ```{r}
 pca_shoulder = prcomp(shoulder.df, center = T, scale. = T)
@@ -91,17 +110,16 @@ pc_loadings <- pca_shoulder$rotation  # Loadings (coefficients of the original v
 ```
 
 ```{r}
-#Visualize the proportion of variance explained by each principal component
+#Visualizing the proportion of variance explained by each principal component
 plot(cumsum(pca_shoulder$sdev^2) / sum(pca_shoulder$sdev^2), xlab = "Number of Principal Components", ylab = "Cumulative Proportion of Variance Explained", type = "b")
 
-#Choose the number of components based on the plot above
 ```
 
 
 ```{r}
-#based on the plot above 
+#based on the plot above by two components 90% of the variance can be explained 
 #Reduce dimensions
-num_components_to_keep <- 2  # Choose the number of components you want to keep
+num_components_to_keep <- 2  # Choosing the number of components you want to keep
 reduced_data <- pc_scores[, 1:num_components_to_keep]
 
 # The 'reduced_data' dataframe now contains the data with reduced dimensions
@@ -124,6 +142,8 @@ plot(reduced_data_df$PC1, reduced_data_df$PC2,
 
 
 ```{r}
+#plotting a 3D plot of the data
+
 plot_3D_shoulder <- plot_ly(
   data = shoulder.df,
   x = ~RIGHT_SHOULDER_X,
@@ -151,130 +171,11 @@ plot_3D_shoulder
 ```
 
 
-
-
-
-
-
-
-
-## looking at hertz based motions
+## Machine's confidnece in capturing the right motion
 
 ```{r}
+#V stands for visibility of the body parts (the red line) and how confident the machine is in capturing the right motion.
 
-right_shoulder_plot_h <- ggplot(time.df, aes(x = RIGHT_SHOULDER_X, y =  RIGHT_SHOULDER_Y)) +
-    geom_point() +
-    geom_path() +
-    theme_classic()
-right_shoulder_plot_h
-
-```
-
-
-```{r}
-right_shoulder_x_h <- ggplot(time.df, aes(x = X, y =  RIGHT_SHOULDER_X)) +
-    geom_point() +
-    geom_path() +
-    theme_classic()
-right_shoulder_x_h
-
-
-```
-
-```{r}
-right_shoulder_y_h <- ggplot(time.df, aes(x = X, y =  RIGHT_SHOULDER_Y)) +
-    geom_point() +
-    geom_path() +
-    theme_classic()
-right_shoulder_y_h
-
-
-```
-
-
-```{r}
-shoulder.df_h = time.df %>% select(RIGHT_SHOULDER_X, RIGHT_SHOULDER_Y, RIGHT_SHOULDER_Z)
-shoulder.df_h
-```
-```{r}
-pca_shoulder_h = prcomp(shoulder.df_h, center = T, scale. = T)
-
-summary(pca_shoulder_h)
-```
-
-```{r}
-#Extract principal components
-pc_scores_h <- pca_shoulder_h$x  # Scores (coordinates of the data points in the new space)
-pc_loadings_h <- pca_shoulder_h$rotation  # Loadings (coefficients of the original variables in the principal components)
-```
-
-```{r}
-#Visualize the proportion of variance explained by each principal component
-plot(cumsum(pca_shoulder_h$sdev^2) / sum(pca_shoulder_h$sdev^2), xlab = "Number of Principal Components", ylab = "Cumulative Proportion of Variance Explained", type = "b")
-
-#Choose the number of components based on the plot above
-```
-
-
-```{r}
-#based on the plot above 
-#Reduce dimensions
-num_components_to_keep_h <- 2  # Choose the number of components you want to keep
-reduced_data_h <- pc_scores_h[, 1:num_components_to_keep_h]
-
-# The 'reduced_data' dataframe now contains the data with reduced dimensions
-
-```
-
-
-```{r}
-# Create a dataframe for the reduced data
-reduced_data_df_h <- as.data.frame(reduced_data_h)
-
-# Scatter plot of the reduced data
-plot(reduced_data_df_h$PC1, reduced_data_df_h$PC2, 
-     xlab = "Principal Component 1",
-     ylab = "Principal Component 2",
-     main = "Scatter Plot of Reduced Data")
-
-
-```
-
-
-```{r}
-plot_3D_shoulder_h <- plot_ly(
-  data = shoulder.df_h,
-  x = ~RIGHT_SHOULDER_X,
-  y = ~RIGHT_SHOULDER_Y,
-  z = ~RIGHT_SHOULDER_Z,
-  #text = ~paste("Time: ", time),
-  type = "scatter3d",
-  mode = "markers"
-)
-
-# Customize the layout
-layout_h <- list(
-  scene = list(
-    xaxis = list(title = 'X-axis'),
-    yaxis = list(title = 'Y-axis'),
-    zaxis = list(title = 'Z-axis')
-  )
-)
-
-# Combine plot and layout
-plot_3D_shoulder_h <- plot_3D_shoulder_h %>% layout(layout_h)
-
-# Display the interactive plot
-plot_3D_shoulder_h
-```
-
-
-
-
-
-
-
-```{r}
 TS_right_shoulder <- time.df2 %>%
     ggplot(aes(x= t_sec, y= RIGHT_SHOULDER_Y)) +
     geom_point() +
@@ -284,70 +185,7 @@ TS_right_shoulder <- time.df2 %>%
     scale_x_continuous("time (sec.)", expand=c(0,0)) +
     theme_classic()
 TS_right_shoulder
-```
-
-
-
-
-
-
-```{r}
-#str(time.df)
-#time.df$X
-```
-
-```{r}
-#plotting the right writs with X and Y axes
-right_wrist_plot <- ggplot(time.df, aes(x = RIGHT_WRIST_X, y =  RIGHT_WRIST_Y)) +
-    geom_point() +
-    geom_path() +
-    theme_classic()
-right_wrist_plot
 
 ```
-
-
-```{r}
-TS_right_wrist <- time.df2 %>%
-    ggplot(aes(x= t_sec, y= RIGHT_WRIST_Y)) +
-    geom_point() +
-    geom_path() +
-    geom_path(aes(y=RIGHT_WRIST_V), color="red") +
-    # geom_path(aes(y=LEFT_WRIST_X), color="red") +
-    scale_x_continuous("time (sec.)", expand=c(0,0)) +
-    theme_classic()
-TS_right_wrist
-```
-
-```{r}
-
-TS_Right_X <- time.df2 %>%
-    ggplot(aes(x= t_sec, y= RIGHT_WRIST_X)) +
-    geom_point() +
-    geom_path() +
-    geom_path(aes(y=RIGHT_WRIST_V), color="red") +
-    # geom_path(aes(y=RIGHT_WRIST_X), color="red") +
-    scale_x_continuous("time (sec.)", expand=c(0,0)) +
-    theme_classic()
-TS_Right_X
-```
-
-```{r}
-
-TS_Left_X <- time.df2 %>%
-    ggplot(aes(x= t_sec, y= LEFT_WRIST_X)) +
-    geom_point() +
-    geom_path() +
-    geom_path(aes(y=LEFT_WRIST_V), color="red") +
-    # geom_path(aes(y=RIGHT_WRIST_X), color="red") +
-    scale_x_continuous("time (sec.)", expand=c(0,0)) +
-    theme_classic()
-TS_Left_X
-
-
-
-```
-
-
 
 
