--- a/math_motion.Rmd
+++ b/math_motion.Rmd
@@ -7,15 +7,13 @@ date: '2023-11-16'
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
-#library(renv)
-#renv::init()
-
-#library(ggplot2)
+library(renv)
+renv::init()
 
 library(tidyverse)
 library(plotly)
 
-#renv::snapshot()
+renv::snapshot()
 
 ```
 
